// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<SectionHeading/> title and cls 1`] = `
<div>
  <h3
    class="domain-field-section-heading section-heading-cls"
  >
    Section Heading Title
  </h3>
</div>
`;

exports[`<SectionHeading/> title only 1`] = `
<div>
  <h3
    class="domain-field-section-heading"
  >
    Section Heading Title
  </h3>
</div>
`;
